--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="enter-your-api-key-here" />
+            android:value="AIzaSyB6NSEN5ihOGZlMEi7x4AzYLUglMc-ROPY" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
