--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   easy_localization: ^3.0.0
   font_awesome_flutter: ^9.2.0
   email_validator: ^2.0.1
-  provider: ^6.0.2
+  provider: ^6.1.1
   persistent_bottom_nav_bar: ^4.0.2
   otp: ^3.1.0
   otp_text_field: ^1.1.3
@@ -51,6 +51,10 @@ dependencies:
   google_maps_flutter: ^2.5.3
   geolocator: ^10.1.0
   permission_handler: ^11.2.0
+  widget_to_marker: ^1.0.4
+  flutter_polyline_points: ^1.0.0
+  georouter: ^0.0.1+1
+  location_distance_calculator: ^0.0.5
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +85,7 @@ flutter:
 
   assets:
     - assets/img/
+    - assets/img/map/
     - assets/svg/
     - assets/translations/
   fonts:
