--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   georouter: ^0.0.1+1
   location_distance_calculator: ^0.0.5
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
